SF Primes/src/objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>OPP_Strategic_Impact__c</fullName>
        <label>Strategic Impact</label>
        <picklist>
            <picklistValues>
                <fullName>New User Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant Effort</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <label>Opportunity Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Environment__c</fullName>
        <label>Original Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Outbound_Change_Set__c</fullName>
        <description>Original (Development) Environment Outbound Change Set Link</description>
        <inlineHelpText>Original (Development) Environment Outbound Change Set Link</inlineHelpText>
        <label>Original (Outbound) Change Set</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name__c</fullName>
        <description>Owner: Queue Name or User Name</description>
        <formula>IF(ISBLANK(Owner:Queue.QueueName), Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName, Owner:Queue.QueueName)</formula>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Child Requests</relationshipLabel>
        <relationshipName>Parent_Request_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planview_Project__c</fullName>
        <label>Planview Project</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prioritization_Criteria__c</fullName>
        <inlineHelpText>Criteria for Governance Board ranked the project as they did.</inlineHelpText>
        <label>Prioritization Criteria</label>
        <picklist>
            <picklistValues>
                <fullName># of Depts / Users Impacted by change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affecting Quota Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Directive / Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Integrity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development vs. Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immovable Due Dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retain Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Generating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streamline Processes / Gain Efficiencies</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Requestor Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Hysteria!</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Managers__c</fullName>
        <label>Project Managers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>New - Discuss with Theresa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Additional Info from Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements Review with Business/Stakeholders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Prioritization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Dev Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Discovery/Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Additional Research from SA/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for SAB Review/Apprpoval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_to_Change_Board__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determined upon project review by the SA Team.</inlineHelpText>
        <label>Project to Change Board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quality Assurance Tester: This is the user that will test the Request once it is in Training.</description>
        <inlineHelpText>Quality Assurance Tester: This is the user that will test the Request once it is in Training.</inlineHelpText>
        <label>QA Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Testers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Testers__c</fullName>
        <label>QA Testers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ready_To_Complete__c</fullName>
        <formula>IF(
ISPICKVAL( Status__c , &apos;Completed&apos;) || ISPICKVAL( Status__c , &apos;Cancelled - Not Approved&apos;) || ISPICKVAL( Status__c , &apos;Cancelled - Duplicate&apos;) || ISPICKVAL( Status__c , &apos;Cancelled - BU Declined&apos;), &quot;&quot;, IF(
LOWER(Owner:Queue.DeveloperName) &lt;&gt; &quot;requestqueue&quot; &amp;&amp;
NOT(ISBLANK(All_Request_Team_Members__c)) &amp;&amp;
(SF_Config_Needed__c = False || NOT(ISBLANK( SF_Config_Admins__c ))) &amp;&amp;
(SF_Dev_Needed__c = False || NOT(ISBLANK( SF_Developers__c ))) &amp;&amp;
NOT(ISPICKVAL(Change_Classification__c,&quot;&quot;)) &amp;&amp;
(Completed_in_QA__c = True &amp;&amp; Completed_in_Unified__c = True) &amp;&amp;
NOT(ISNULL(Duration_to_Completion__c)) &amp;&amp;
NOT(ISBLANK(Initial_Estimate__c)) &amp;&amp;
NOT(ISPICKVAL(Review_Status__c , &quot;&quot;) &amp;&amp;
LOWER( RecordType.Name ) = &quot;salesforce feature&quot;), 
&quot;True&quot;, 
&quot;False&quot;))</formula>
        <label>Ready To Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_Close__c</fullName>
        <formula>CASE( Ready_To_Complete__c ,
	&quot;True&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000ylAU&quot;,&quot;Ready&quot;,32,32),        /* tick.png */
	&quot;False&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000yl1s&quot;,&quot;Not Ready&quot;,32,32),   /* flag_red.png */
        &quot;&quot;)</formula>
        <label>Ready to Close</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Development_Needed__c</fullName>
        <description>This is the reason this request cannot be completed with configuration in Salesforce.</description>
        <inlineHelpText>This is the reason this request cannot be completed with configuration in Salesforce.</inlineHelpText>
        <label>Reason Development Needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Not_Completed_In_All_Environments__c</fullName>
        <label>Reason Not Completed In All Environments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_to_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Existing Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Another Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Related Requests</relationshipLabel>
        <relationshipName>Related_to_Request_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Managers__c</fullName>
        <label>Release Managers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reopened_Reason__c</fullName>
        <label>Reopened Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Additional Changes Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Error on Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <displayFormat>RQ-{00000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <label>Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Category__c</fullName>
        <label>Review Category</label>
        <picklist>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <inlineHelpText>blank = no review completed</inlineHelpText>
        <label>Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Review Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Comments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Resource__c</fullName>
        <label>SA Resource</label>
        <picklist>
            <picklistValues>
                <fullName>Maggie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irfan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patti</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SF_BA_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SF BA Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Config_Admins__c</fullName>
        <label>SF Config Admins</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Config_Needed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SF Config Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Dev_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SF Dev Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Developers__c</fullName>
        <label>SF Developers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Export__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Ops Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Tool_Application_Affected__c</fullName>
        <label>Sales Tool/Application Affected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Instance__c</fullName>
        <label>Salesforce Instance</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MenuVantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIS/CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGT Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signer_Requested_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signer Requested For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signer_Type__c</fullName>
        <label>Signer Type</label>
        <picklist>
            <picklistValues>
                <fullName>CRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Countersigner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_Exit_Due_Date_Indicator__c</fullName>
        <formula>IF (
  (Estimated_Stage_Exit_To_Due_Date_Gap__c &lt; 0), 
  IMAGE(&quot;/img/samples/light_red.gif&quot;,&quot;&quot;),
  IF ( Estimated_Stage_Exit_To_Due_Date_Gap__c &gt; ( ( 6 - VALUE( LEFT(Stage__c, 1) ) ) * 
       CASE ( TEXT(Change_Classification__c), 
         &apos;Minor Release (&gt;16)&apos;, 1,
         &apos;Major Release (&gt;40)&apos;, 2,
         &apos;Mondo (&gt;100)&apos;, 3, 
         0 
       ) 
      ), 
      IMAGE(&quot;/img/samples/light_green.gif&quot;,&quot;&quot;),
      IMAGE(&quot;/img/samples/light_yellow.gif&quot;,&quot;&quot;)
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Exit Due Date Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>IF (
   CONTAINS( TEXT(Status__c), &apos;Cancelled&apos; ), &apos;0 - Cancelled&apos;, 
   IF (CONTAINS( TEXT(Status__c), &apos;New&apos; ), &apos;0 - New&apos;,
   IF (CONTAINS( TEXT(Status__c), &apos;Approved&apos; ), &apos;0 - Approved&apos;, 
   IF (CONTAINS( TEXT(Status__c), &apos;Opportunity&apos; ), &apos;0 - Opportunity&apos;, 
   IF (CONTAINS( TEXT(Status__c), &apos;Requirements&apos; ), &apos;1 - Requirements&apos;, 
   IF (CONTAINS( TEXT(Status__c), &apos;Design&apos; ), &apos;2 - Design&apos;, 
   IF (CONTAINS( TEXT(Status__c), &apos;Config / Dev&apos; ), &apos;3 - Config / Dev&apos;, 
   IF (CONTAINS( TEXT(Status__c), &apos;Verification&apos; ), &apos;4 - Verification&apos;, 
   IF (CONTAINS( TEXT(Status__c), &apos;Deployment&apos; ), &apos;5 - Deployment&apos;,
   IF (CONTAINS( TEXT(Status__c), &apos;Complete&apos; ), &apos;6 - Complete&apos;, 
   IF (CONTAINS( TEXT(Status__c), &apos;Closed&apos; ), &apos;6 - Complete&apos;, 
   &apos;Unknown&apos; ))))))))))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending BU for Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity - In Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity - Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity - Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity - Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity - Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity - Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New - Under Review</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements - Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements - Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements - Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements - Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config / Dev - Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config / Dev - Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config / Dev - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config / Dev - Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config / Dev - Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config / Dev - Pre-Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config / Dev - Reopened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprints - In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Dev_Start_Date__c</fullName>
        <label>Target Dev Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Production_Availability_Date__c</fullName>
        <formula>CASE(CASE( MOD(DATEVALUE(IF(Completed_in_HotFix__c = True, Date_Time_Completed_in_HotFix__c, Date_Time_Completed_in_QA__c)) - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, 
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;ERROR&quot;), 
&quot;Tuesday&quot;,DATEVALUE(IF(Completed_in_HotFix__c = True, Date_Time_Completed_in_HotFix__c, Date_Time_Completed_in_QA__c)) + 7, 
&quot;Wednesday&quot;, DATEVALUE(IF(Completed_in_HotFix__c = True, Date_Time_Completed_in_HotFix__c, Date_Time_Completed_in_QA__c)) + 6, 
&quot;Thursday&quot;, DATEVALUE(IF(Completed_in_HotFix__c = True, Date_Time_Completed_in_HotFix__c, Date_Time_Completed_in_QA__c)) + 5, 
&quot;Friday&quot;, DATEVALUE(IF(Completed_in_HotFix__c = True, Date_Time_Completed_in_HotFix__c, Date_Time_Completed_in_QA__c)) + 4, 
&quot;Saturday&quot;, DATEVALUE(IF(Completed_in_HotFix__c = True, Date_Time_Completed_in_HotFix__c, Date_Time_Completed_in_QA__c)) + 3, 
&quot;Sunday&quot;, DATEVALUE(IF(Completed_in_HotFix__c = True, Date_Time_Completed_in_HotFix__c, Date_Time_Completed_in_QA__c)) + 2, 
&quot;Monday&quot;, DATEVALUE(IF(Completed_in_HotFix__c = True, Date_Time_Completed_in_HotFix__c, Date_Time_Completed_in_QA__c)) + 1, 
null)</formula>
        <inlineHelpText>Target date this request should be available in Production.</inlineHelpText>
        <label>Target Production Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Test_Date__c</fullName>
        <label>Target Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Training_Date__c</fullName>
        <label>Target Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Review_Comments__c</fullName>
        <label>Technical Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Reviewers__c</fullName>
        <label>Technical Reviewers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Groups_Impacted__c</fullName>
        <label>User Groups Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB - Enterprise Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB - Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB - IFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB - Mktg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB - Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - BDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - CrdtSvcs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Data Librarians</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Laser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Mktg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - PSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Traver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGT - Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGT - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV - Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVR - Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVR - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVR - Client Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMI</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All_Opportunities_ClosedLost</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>OPP_Closed_Lost_Reason__c</columns>
        <columns>OPP_Owner__c</columns>
        <columns>User__c</columns>
        <columns>OPP_Business_Unit__c</columns>
        <columns>OPP_FY_Initiative__c</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>OPP_Potential_Delivery_Center__c</columns>
        <columns>Initial_Estimate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Business_Unit_Priority__c</columns>
        <columns>Priority__c</columns>
        <columns>OPP_Has_Strategic_Impact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>contains</operation>
            <value>Lost</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.IT_Project_Opportunity</value>
        </filters>
        <label>All Opportunities - Closed Lost</label>
        <language>en_US</language>
        <sharedTo>
            <group>Access_for_Request_Views</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_ClosedWon</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OPP_Owner__c</columns>
        <columns>User__c</columns>
        <columns>OPP_Business_Unit__c</columns>
        <columns>OPP_FY_Initiative__c</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>OPP_Potential_Delivery_Center__c</columns>
        <columns>Initial_Estimate__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Aged_Days__c</columns>
        <columns>Business_Unit_Priority__c</columns>
        <columns>Priority__c</columns>
        <columns>OPP_Has_Strategic_Impact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>contains</operation>
            <value>Won</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.IT_Project_Opportunity</value>
        </filters>
        <label>All Opportunities - Closed Won</label>
        <language>en_US</language>
        <sharedTo>
            <group>Access_for_Request_Views</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_Open</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OPP_Owner__c</columns>
        <columns>User__c</columns>
        <columns>OPP_Business_Unit__c</columns>
        <columns>OPP_FY_Initiative__c</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>OPP_Potential_Delivery_Center__c</columns>
        <columns>Initial_Estimate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Business_Unit_Priority__c</columns>
        <columns>Priority__c</columns>
        <columns>OPP_Has_Strategic_Impact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>notContain</operation>
            <value>closed,lost,completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.IT_Project_Opportunity</value>
        </filters>
        <label>All Opportunities - Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>Access_for_Request_Views</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Requests_not_to_Change_Board</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SF_Config_Needed__c</columns>
        <columns>Assigned_Config__c</columns>
        <columns>Change_Classification__c</columns>
        <columns>User__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>SF_Dev_Needed__c</columns>
        <columns>Assigned_SF_Dev__c</columns>
        <columns>External_Dev__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>,Cancelled,Closed,On Hold,Cancelled - Duplicate</value>
        </filters>
        <filters>
            <field>SF_Config_Needed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.SalesForce_Project</value>
        </filters>
        <label>SF Non-Dev Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops_Director_DS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Requests</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Project_to_Change_Board__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>User_Groups_Impacted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Closed,Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.SalesForce_Project</value>
        </filters>
        <label>Closed Requests</label>
        <language>en_US</language>
    </listViews>
</CustomObject>